--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chokidar",
   "description": "A neat wrapper around node.js fs.watch / fs.watchFile.",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "keywords": ["fs", "watch", "watchFile", "watcher", "watching", "file"],
   "homepage": "https://github.com/paulmillr/chokidar",
   "author": "Paul Miller (http://paulmillr.com)",
@@ -18,14 +18,14 @@
   }],
   "main": "./lib/index",
   "scripts": {
-    "postinstall": "node setup.js postinstall",
-    "test": "node setup.js test"
+    "postinstall": "node beare.js compileCoffeeScripts",
+    "test": "node beare.js testWithMocha"
   },
   "engines": {
     "node": "~0.6.10 || 0.7 || 0.8"
   },
   "dependencies": {
-    "coffee-script": "1.3.1"
+    "beare": "0.1.0"
   },
   "devDependencies": {
     "mocha": "1.0.1",
