--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "engines": {
     "node": "~0.6.10 || 0.7 || 0.8"
   },
+  "scripts": {
+    "prepublish": "coffee -o lib/ src/",
+    "postinstall": "node setup.js postinstall",
+    "test": "node setup.js test"
+  },
   "dependencies": {},
   "devDependencies": {
     "mocha": "1.0.1",
