--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "mocha": "1.3.0",
-    "expect.js": "0.1.2"
+    "mocha": "~1.7.3",
+    "chai": "~1.4.0",
+    "sinon": "~1.5.2",
+    "sinon-chai": "2.2.0",
+    "coffee-script": "~1.4.0"
   }
 }
