--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
       "url": "http://github.com/paulmillr/chokidar/raw/master/README.md"
     }
   ],
-  "main": "./lib/index",
   "scripts": {
     "prepublish": "node setup.js prepublish",
     "postpublish": "node setup.js postpublish",
-    "test": "node setup.js test",
+    "test": "./node_modules/.bin/mocha",
     "postinstall": "node setup.js postinstall"
   },
   "devDependencies": {
@@ -38,5 +37,9 @@
     "sinon-chai": "2.2.0",
     "coffee-script": "~1.6.0",
     "rimraf": "~2.2.2"
+  },
+  "optionalDependencies": {
+    "recursive-readdir": "0.0.2",
+    "fsevents": "~0.1.6"
   }
 }
