--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   ],
   "scripts": {
     "test": "./node_modules/.bin/mocha",
-    "postinstall": "node setup-deps.js"
+    "postinstall": "nodejs setup-deps.js"
   },
   "devDependencies": {
-    "mocha": "~1.7.3",
+    "mocha": "~1.12.0",
     "chai": "~1.4.0",
     "sinon": "~1.5.2",
     "sinon-chai": "2.2.0",
