Add optionalDependencies to fix #92 extraneous issues

--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "sinon-chai": "2.2.0",
     "coffee-script": "~1.6.0",
     "rimraf": "~2.2.2"
+  },
+  "optionalDependencies": {
+    "fsevents": "*",
+    "recursive-readdir": "*"
   }
 }
