--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     }
   ],
   "scripts": {
-    "test": "./node_modules/.bin/mocha",
-    "postinstall": "node setup-deps.js"
+    "test": "./node_modules/.bin/mocha"
   },
   "devDependencies": {
     "mocha": "~1.7.3",
@@ -35,5 +34,9 @@
     "sinon-chai": "2.2.0",
     "coffee-script": "~1.6.0",
     "rimraf": "~2.2.2"
+  },
+  "optionalDependencies": {
+    "fsevents": "0.2.0",
+    "recursive-readdir": "0.0.2"
   }
 }
