--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "watch",
     "watchFile",
     "watcher",
+    "watching",
     "file"
   ],
   "homepage": "https://github.com/paulmillr/chokidar",
