--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "rimraf": "~2.2.2"
   },
   "optionalDependencies": {
-    "fsevents": "pipobscure/fsevents#7dcdf9fa3f8956610fd6f69f72c67bace2de7138",
+    "fsevents": "0.3.0",
     "recursive-readdir": "0.0.2"
   }
 }
