Update dev deps

--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "index.js"
   ],
   "devDependencies": {
-    "mocha": "~1.7.3",
-    "chai": "~1.4.0",
-    "sinon": "~1.5.2",
-    "sinon-chai": "2.2.0",
-    "rimraf": "~2.2.2"
+    "mocha": "~2.0.0",
+    "chai": "~1.9.2",
+    "sinon": "~1.10.3",
+    "sinon-chai": "~2.6.0",
+    "rimraf": "~2.2.8"
   },
   "optionalDependencies": {
     "fsevents": "0.3.0",
