--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "sinon-chai": "~2.6.0"
   },
   "optionalDependencies": {
-    "fsevents": "0.3.0",
+    "fsevents": "~0.3.1",
     "readdirp": "~1.1.0"
   },
   "dependencies": {
