--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "readdirp": "~1.3.0",
-    "async-each": "~0.1.5"
+    "async-each": "~0.1.5",
+    "anymatch": "~1.1.0"
   }
 }
