--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "istanbul": "~0.3.5",
     "mocha": "~2.0.0",
     "sinon": "~1.10.3",
-    "sinon-chai": "~2.6.0"
+    "sinon-chai": "~2.6.0",
+    "rimraf": "~2.2.8"
   },
   "optionalDependencies": {
     "fsevents": "~0.3.1"
