--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chokidar",
   "description": "A neat wrapper around node.js fs.watch / fs.watchFile / fsevents.",
-  "version": "0.12.6",
+  "version": "1.0.0-rc1",
   "keywords": [
     "fs",
     "watch",
