--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chokidar",
   "description": "A neat wrapper around node.js fs.watch / fs.watchFile / fsevents.",
-  "version": "1.0.0-rc1",
+  "version": "1.0.0-rc2",
   "keywords": [
     "fs",
     "watch",
@@ -32,7 +32,7 @@
   },
   "main": "lib",
   "files": [
-    "lib"
+    "lib/"
   ],
   "devDependencies": {
     "chai": "~1.9.2",
