--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "anymatch": "~1.1.0",
     "async-each": "~0.1.5",
     "glob-parent": "~1.0.0",
+    "is-binary-path": "~1.0.0",
     "readdirp": "~1.3.0"
   }
 }
