--- a/package.json
+++ b/package.json
@@ -35,21 +35,21 @@
     "lib/"
   ],
   "devDependencies": {
-    "chai": "~1.9.2",
-    "coveralls": "~2.11.2",
-    "istanbul": "~0.3.5",
-    "mocha": "~2.0.0",
-    "sinon": "~1.10.3",
-    "sinon-chai": "~2.6.0"
+    "chai": "^1.9.2",
+    "coveralls": "^2.11.2",
+    "istanbul": "^0.3.5",
+    "mocha": "^2.0.0",
+    "sinon": "^1.10.3",
+    "sinon-chai": "^2.6.0"
   },
   "optionalDependencies": {
-    "fsevents": "~0.3.1"
+    "fsevents": "^0.3.1"
   },
   "dependencies": {
-    "anymatch": "~1.1.0",
-    "async-each": "~0.1.5",
-    "glob-parent": "~1.0.0",
-    "is-binary-path": "~1.0.0",
-    "readdirp": "~1.3.0"
+    "anymatch": "^1.1.0",
+    "async-each": "^0.1.5",
+    "glob-parent": "^1.0.0",
+    "is-binary-path": "^1.0.0",
+    "readdirp": "^1.3.0"
   }
 }
