--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
   },
   "dependencies": {
     "anymatch": "^1.1.0",
+    "arrify": "^1.0.0",
     "async-each": "^0.1.5",
     "glob-parent": "^1.0.0",
     "is-binary-path": "^1.0.0",
+    "is-glob": "^1.1.3",
     "readdirp": "^1.3.0"
   }
 }
