--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "glob-parent": "^1.0.0",
     "is-binary-path": "^1.0.0",
     "is-glob": "^1.1.3",
+    "path-is-absolute": "^1.0.0",
     "readdirp": "^1.3.0"
   }
 }
