--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: c
 env:
+  - NODE_VERSION="4"
+  - NODE_VERSION="iojs-v3"
   - NODE_VERSION="iojs-v2"
   - NODE_VERSION="iojs-v1"
   - NODE_VERSION="0.12"
