--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: c
 env:
+  - NODE_VERSION="5"
   - NODE_VERSION="4"
   - NODE_VERSION="iojs-v3"
   - NODE_VERSION="iojs-v2"
@@ -16,7 +17,6 @@ before_install:
   - source ~/.nvm/nvm.sh
   - nvm install $NODE_VERSION
   - nvm use $NODE_VERSION
-  - if [ "$NODE_VERSION" == "0.8" ]; then npm update -g npm; fi
   - node -v
 install:
   - npm install
