--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,7 @@ environment:
     - nodejs_version: "0.10"
     - nodejs_version: "0.12"
     - nodejs_version: "4"
+    - nodejs_version: "5"
     # io.js
     - nodejs_version: "1"
     - nodejs_version: "2"
