--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,13 @@
 # Test against this version of Node.js
 environment:
   matrix:
-    # node.js
-    - nodejs_version: "0.10"
-    - nodejs_version: "0.12"
-    - nodejs_version: "4"
     - nodejs_version: "5"
-    # io.js
-    - nodejs_version: "1"
-    - nodejs_version: "2"
-    - nodejs_version: "3"
+    - nodejs_version: "4"
+    - nodejs_version: "3" # io.js
+    - nodejs_version: "2" # io.js
+    - nodejs_version: "1" # io.js
+    - nodejs_version: "0.12"
+    - nodejs_version: "0.10"
 
 # Install scripts. (runs after repo cloning)
 install:
