--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.20",
     "mocha": "^2.0.0",
+    "rimraf": "^2.4.3",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.6.0"
   },
