--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "is-binary-path": "^1.0.0",
     "is-glob": "^2.0.0",
     "path-is-absolute": "^1.0.0",
-    "readdirp": "^2.0.0"
+    "readdirp": "^2.0.0",
+    "walk-filtered": "^0.3.0"
   }
 }
