--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "coveralls": "^2.11.2",
+    "graceful-fs": "4.1.4",
     "istanbul": "^0.3.20",
     "mocha": "^2.0.0",
     "rimraf": "^2.4.3",
