Update Travis config
Node.js on OS X is now officially supported

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,12 @@
-language: c
-env:
-  - NODE_VERSION="6"
-  - NODE_VERSION="5"
-  - NODE_VERSION="4"
-  - NODE_VERSION="0.12"
-  - NODE_VERSION="0.10"
+language: node_js
+node_js:
+  - '6'
+  - '5'
+  - '4'
+  - '0.10'
 os:
   - linux
   - osx
-before_install:
-  - echo $TRAVIS_OS_NAME
-  - export PATH=./node_modules/.bin/:$PATH
-  - rm -rf ~/.nvm/ && git clone --depth 1 https://github.com/creationix/nvm.git ~/.nvm
-  - source ~/.nvm/nvm.sh
-  - nvm install $NODE_VERSION
-  - nvm use $NODE_VERSION
-  - node -v
-install:
-  - npm install
 script:
   - npm run ci-test
 sudo: false
