--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "mocha": "^3.0.0",
     "rimraf": "^2.4.3",
     "sinon": "^1.10.3",
-    "sinon-chai": "^2.6.0"
+    "sinon-chai": "^2.6.0",
+    "upath": "1.0.0"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
@@ -45,6 +46,7 @@
   "dependencies": {
     "anymatch": "^1.3.0",
     "async-each": "^1.0.0",
+    "braces": "2.2.2",
     "glob-parent": "^2.0.0",
     "inherits": "^2.0.1",
     "is-binary-path": "^1.0.0",
