--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "license": "MIT",
   "scripts": {
     "test": "istanbul test node_modules/mocha/bin/_mocha",
-    "ci-test": "istanbul cover _mocha && cat ./coverage/lcov.info | coveralls"
+    "ci-test": "istanbul cover _mocha",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "files": [
     "index.js",
