--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "mocha": "^3.0.0",
     "rimraf": "^2.4.3",
     "sinon": "^1.10.3",
-    "sinon-chai": "^2.6.0",
-    "upath": "1.0.0"
+    "sinon-chai": "^2.6.0"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
@@ -54,6 +53,7 @@
     "is-glob": "^4.0.0",
     "normalize-path": "^2.1.1",
     "path-is-absolute": "^1.0.0",
-    "readdirp": "^2.0.0"
+    "readdirp": "^2.0.0",
+    "upath": "1.0.0"
   }
 }
