Add watchman backend

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "anymatch": "^2.0.0",
     "async-each": "^1.0.0",
     "braces": "^2.3.0",
+    "fb-watchman": "^2.0.0",
     "glob-parent": "^3.1.0",
     "inherits": "^2.0.1",
     "is-binary-path": "^1.0.0",
