--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "coveralls": "^3.0.1",
+    "fs-extra": "^6.0.1",
     "graceful-fs": "4.1.4",
     "mocha": "^5.2.0",
     "nyc": "^11.8.0",
