--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,13 +4,10 @@ environment:
     - nodejs_version: "10"
     - nodejs_version: "8"
     - nodejs_version: "6"
-    - nodejs_version: "4"
-    - nodejs_version: "0.12"
-    - nodejs_version: "0.10"
 
-matrix:
-  allow_failures:
-    - nodejs_version: "0.10"
+# matrix:
+#   allow_failures:
+#     - nodejs_version: "0.10"
 
 # Install scripts. (runs after repo cloning)
 install:
