--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chokidar",
   "description": "A neat wrapper around node.js fs.watch / fs.watchFile / fsevents.",
-  "version": "2.0.4",
+  "version": "2.0.5-pre-1",
   "keywords": [
     "fs",
     "watch",
@@ -40,7 +40,7 @@
     "sinon-chai": "^2.6.0"
   },
   "optionalDependencies": {
-    "fsevents": "^1.2.2"
+    "fsevents": "napi"
   },
   "dependencies": {
     "anymatch": "^2.0.0",
