Switch to const from vars.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chai": "^3.2.0",
     "coveralls": "^3.0.1",
     "graceful-fs": "4.1.4",
+    "jshint": "^2.10.1",
     "mocha": "^5.2.0",
     "nyc": "^11.8.0",
     "rimraf": "^2.4.3",
