--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "license": "MIT",
   "scripts": {
     "test": "nyc mocha --exit",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "dtslint": "dtslint types"
   },
   "files": [
     "index.js",
@@ -46,8 +47,10 @@
     "fsevents": "^1.2.7"
   },
   "devDependencies": {
+    "@types/node": "^11.9.4",
     "chai": "^3.2.0",
     "coveralls": "^3.0.1",
+    "dtslint": "0.4.1",
     "graceful-fs": "4.1.4",
     "mocha": "^5.2.0",
     "nyc": "^11.8.0",
