Add TypeScript type definitions (#801)
* Add dtslint and @types/node

Adding dtslint to test (lint) the type definitions and @types/node since they're a depedency of these types

* Assert the types are valid in CI

* Create the tsconfig for validating types

* Port (copy/paste) existing types from DefinitelyTyped

* Add the types key and include in the package

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "file",
     "fsevents"
   ],
+  "types": "./types/index.d.ts",
   "homepage": "https://github.com/paulmillr/chokidar",
   "author": "Paul Miller (https://paulmillr.com), Elan Shanker",
   "repository": {
@@ -23,11 +24,13 @@
   "license": "MIT",
   "scripts": {
     "test": "nyc mocha --exit",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "dtslint": "dtslint types"
   },
   "files": [
     "index.js",
-    "lib/"
+    "lib/",
+    "types/index.d.ts"
   ],
   "dependencies": {
     "anymatch": "^2.0.0",
@@ -46,8 +49,10 @@
     "fsevents": "^1.2.7"
   },
   "devDependencies": {
+    "@types/node": "^11.9.4",
     "chai": "^3.2.0",
     "coveralls": "^3.0.1",
+    "dtslint": "0.4.1",
     "graceful-fs": "4.1.4",
     "mocha": "^5.2.0",
     "nyc": "^11.8.0",
