--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "is-glob": "^4.0.0",
     "normalize-path": "^3.0.0",
     "readdirp": "paulmillr/readdirp"
+    "readdirp": "^2"
   },
   "optionalDependencies": {
     "fsevents": "napi"
