--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: node_js
 node_js:
-  - '10'
-  - '8'
+  - node
+  - "10"
+  - "8"
 os:
-  - linux
   - osx
+  - linux
   - windows
-script:
-  - npm run test
 after_script:
   - npm run coveralls
   # - npm run dtslint
-sudo: false
