--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "dependencies": {
     "anymatch": "^3.0.0",
-    "async-each": "^1.0.1",
+    "async-each": "^1.0.3",
     "braces": "^3.0.0",
     "glob-parent": "^5.0.0",
     "is-binary-path": "^2.0.1",
     "is-glob": "^4.0.1",
     "normalize-path": "^3.0.0",
-    "readdirp": "github:JSMonk/readdirp"
+    "readdirp": "github:paulmillr/readdirp"
   },
   "optionalDependencies": {
-    "fsevents": "^2.0.3"
+    "fsevents": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "^11.9.4",
