Update nyc options
* be explicit with the files we want included
* add more reporters

--- a/package.json
+++ b/package.json
@@ -77,5 +77,16 @@
     "predef": [
       "toString"
     ]
+  },
+  "nyc": {
+    "include": [
+      "index.js",
+      "lib/*.js"
+    ],
+    "reporter": [
+      "html",
+      "lcov",
+      "text"
+    ]
   }
 }
