--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-node_modules
-test-fixtures
 *.bak
 *.log
-.nyc_output
-package-lock.json
+/.nyc_output/
+/coverage/
+/node_modules/
+/test-fixtures/
+/package-lock.json
