Add Coveralls support.
Only runs for Node.js 10 and on Ubuntu.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,3 +22,9 @@ jobs:
       - run: npm install
       - name: Run tests
         run: npm test
+
+      - name: Run Coveralls
+        uses: coverallsapp/github-action@master
+        if: startsWith(matrix.os, 'ubuntu') && matrix.node == 10
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
