Move ESLint to a separate action.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "dtslint": "dtslint types",
     "lint": "eslint --report-unused-disable-directives --ignore-path .gitignore .",
     "mocha": "mocha",
-    "test": "npm run lint && nyc npm run mocha -- --exit"
+    "mocha:ci": "nyc npm run mocha -- --exit",
+    "test": "npm run lint && npm run mocha:ci"
   },
   "keywords": [
     "fs",
