--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,7 @@ env:
 
 jobs:
   build:
-    name: node ${{ matrix.node-version }} @ ${{ matrix.os }}
+    name: v${{ matrix.node-version }} @ ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
