--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^6.5.1",
     "mocha": "^6.2.1",
     "nyc": "^14.1.1",
+    "rimraf": "^3.0.0",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
     "upath": "^1.2.0"
