--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
       "es6": true
     },
     "rules": {
+      "array-callback-return": "error",
       "no-empty": [
         "error",
         {
