--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,4 +21,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - name: Run mocha tests
-        run: npm run mocha:ci
+        run: npm run mocha
