--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
           "allowEmptyCatch": true
         }
       ],
+      "no-lonely-if": "error",
+      "no-var": "error",
       "object-shorthand": "error",
       "prefer-arrow-callback": [
         "error",
@@ -110,8 +112,7 @@
       "quotes": [
         "error",
         "single"
-      ],
-      "no-var": "error"
+      ]
     }
   },
   "nyc": {
