mocha: move timeout in the CLI

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "scripts": {
     "dtslint": "dtslint types",
     "lint": "eslint --report-unused-disable-directives --ignore-path .gitignore .",
-    "mocha": "mocha --exit",
+    "mocha": "mocha --exit --timeout 60000",
     "test": "npm run lint && npm run mocha"
   },
   "keywords": [
