Update dtslint to ^1.0.2

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@types/node": "^12",
     "chai": "^4.2",
-    "dtslint": "0.9.9",
+    "dtslint": "^1.0.2",
     "eslint": "^6.6.0",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
