Improve and try to fix tests. #941
* Lint

* Remove commented out test.

* Use the existent fs module object.

* Move function and some vars around

* mocha: move timeout in the CLI

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "scripts": {
     "dtslint": "dtslint types",
     "lint": "eslint --report-unused-disable-directives --ignore-path .gitignore .",
-    "mocha": "mocha --exit",
+    "mocha": "mocha --exit --timeout 60000",
     "test": "npm run lint && npm run mocha"
   },
   "keywords": [
@@ -83,6 +83,8 @@
           "allowEmptyCatch": true
         }
       ],
+      "no-lonely-if": "error",
+      "no-var": "error",
       "object-shorthand": "error",
       "prefer-arrow-callback": [
         "error",
@@ -110,8 +112,7 @@
       "quotes": [
         "error",
         "single"
-      ],
-      "no-var": "error"
+      ]
     }
   },
   "nyc": {
