--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chokidar",
   "description": "Minimal and efficient cross-platform file watching library",
-  "version": "3.5.2",
+  "version": "4.0.0-alpha",
   "homepage": "https://github.com/paulmillr/chokidar",
   "author": "Paul Miller (https://paulmillr.com)",
   "contributors": [
@@ -9,7 +9,7 @@
     "Elan Shanker"
   ],
   "engines": {
-    "node": ">= 8.10.0"
+    "node": ">= 14.10.0"
   },
   "main": "index.js",
   "dependencies": {
@@ -25,7 +25,7 @@
     "fsevents": "~2.3.2"
   },
   "devDependencies": {
-    "@types/node": "^14",
+    "@types/node": "^14.18.7",
     "chai": "^4.3",
     "dtslint": "^3.3.0",
     "eslint": "^7.0.0",
