--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
     "fsevents": "~2.3.2"
   },
   "devDependencies": {
-    "@types/node": "^14.18.7",
-    "chai": "^4.3",
-    "dtslint": "^3.3.0",
-    "eslint": "^7.0.0",
-    "mocha": "^7.0.0",
-    "nyc": "^15.0.0",
-    "rimraf": "^3.0.0",
-    "sinon": "^9.0.1",
-    "sinon-chai": "^3.3.0",
-    "typescript": "~4.4.3",
+    "@types/node": "^16.11.7",
+    "chai": "4.3.4",
+    "eslint": "^8.7.0",
+    "mocha": "^9.1.4",
+    "nyc": "15.1.0",
+    "rimraf": "3.0.2",
+    "sinon": "12.0.1",
+    "sinon-chai": "3.7.0",
+    "typescript": "~4.5.3",
     "upath": "^1.2.0"
   },
   "files": [
@@ -47,7 +46,6 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dtslint": "dtslint types",
     "lint": "eslint --report-unused-disable-directives --ignore-path .gitignore .",
     "mocha": "mocha --exit --timeout 90000",
     "test": "npm run lint && npm run mocha"
