--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "is-binary-path": "2.1.0",
     "normalize-path": "3.0.0",
-    "readdirp": "~3.6.0"
+    "readdirp": "github:paulmillr/readdirp"
   },
   "optionalDependencies": {
     "fsevents": "~2.3.2"
@@ -30,7 +30,7 @@
     "sinon": "12.0.1",
     "sinon-chai": "3.7.0",
     "typescript": "~4.5.3",
-    "upath": "^1.2.0"
+    "upath": "2.0.1"
   },
   "files": [
     "lib/*.js",
