--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,17 @@
 {
-    "compilerOptions": {
-        "strict": false,
-        "declaration": true,
-        "outDir": "lib",
-        "target": "es2020",
-        "lib": ["es2020"], // Set explicitly to remove DOM
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "noUnusedLocals": true,
-        "esModuleInterop": true,
-        "baseUrl": ".",
-    },
-    "include": ["src"],
-    "exclude": [
-        "node_modules"
-    ],
+  "compilerOptions": {
+    "strict": false,
+    "declaration": true,
+    "target": "es2020",
+    "lib": ["es2020"],
+    "module": "es2022",
+    "moduleResolution": "node",
+    "outDir": "lib",
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "esModuleInterop": true,
+    "baseUrl": ".",
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "lib"]
 }
