--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,14 @@
 name: Lint
-on: [push, pull_request]
+
+on:
+  push:
+    branches-ignore:
+      - "dependabot/**"
+  pull_request:
+  workflow_dispatch:
+
 env:
-  CI: true
+  FORCE_COLOR: 2
 
 jobs:
   lint:
@@ -9,12 +16,12 @@ jobs:
 
     steps:
       - name: Clone repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
-      - name: Set Node.js version
-        uses: actions/setup-node@v1
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: "12"
+          node-version: "16"
 
       - name: Install npm dependencies
         run: npm install
