--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,24 +1,41 @@
 name: Node CI
-on: [push, pull_request]
+
+on:
+  push:
+    branches-ignore:
+      - "dependabot/**"
+  pull_request:
+  workflow_dispatch:
+
 env:
-  CI: true
+  FORCE_COLOR: 2
 
 jobs:
-  build:
-    name: v${{ matrix.node-version }} @ ${{ matrix.os }}
+  test:
+    name: Node.js ${{ matrix.node }} @ ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+
     strategy:
       fail-fast: false
       matrix:
-        node-version: [8, 10, 12, 14]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        node: [8, 10, 12, 14, 16]
+        os: [ubuntu-latest]
+        include:
+          - os: windows-latest
+            node: 8
+          - os: windows-latest
+            node: 14
+          - os: macOS-latest
+            node: 8
+          - os: macOS-latest
+            node: 14
 
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node }}
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ matrix.node }}
       - run: npm install
       - name: Run mocha tests
         run: npm run mocha
