--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": ">= 8.10.0"
   },
   "main": "index.js",
+  "types": "./types/index.d.ts",
   "dependencies": {
     "anymatch": "~3.1.2",
     "braces": "~3.0.2",
@@ -30,11 +31,10 @@
     "dtslint": "^3.3.0",
     "eslint": "^7.0.0",
     "mocha": "^7.0.0",
-    "nyc": "^15.0.0",
     "rimraf": "^3.0.0",
     "sinon": "^9.0.1",
     "sinon-chai": "^3.3.0",
-    "typescript": "~4.4.3",
+    "typescript": "^4.4.3",
     "upath": "^1.2.0"
   },
   "files": [
@@ -65,17 +65,6 @@
     "file",
     "fsevents"
   ],
-  "types": "./types/index.d.ts",
-  "nyc": {
-    "include": [
-      "index.js",
-      "lib/*.js"
-    ],
-    "reporter": [
-      "html",
-      "text"
-    ]
-  },
   "funding": [
     {
       "type": "individual",
