--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint": "^8.7.0",
     "mocha": "^9.1.4",
     "nyc": "15.1.0",
-    "rimraf": "3.0.2",
+    "rimraf": "^5.0.5",
     "sinon": "12.0.1",
     "sinon-chai": "3.7.0",
     "typescript": "~4.5.3",
