--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chokidar",
   "description": "Minimal and efficient cross-platform file watching library",
-  "version": "3.5.4",
+  "version": "3.6.0",
   "homepage": "https://github.com/paulmillr/chokidar",
   "author": "Paul Miller (https://paulmillr.com)",
   "contributors": [
@@ -53,6 +53,7 @@
   "scripts": {
     "dtslint": "dtslint types",
     "lint": "eslint --report-unused-disable-directives --ignore-path .gitignore .",
+    "build": "npm ls",
     "mocha": "mocha --exit --timeout 90000",
     "test": "npm run lint && npm run mocha"
   },
@@ -65,14 +66,5 @@
     "file",
     "fsevents"
   ],
-  "funding": [
-    {
-      "type": "individual",
-      "url": "https://paulmillr.com/funding/"
-    },
-    {
-      "type": "github",
-      "url": "https://github.com/sponsors/paulmillr"
-    }
-  ]
+  "funding": "https://paulmillr.com/funding/"
 }
