chore: introduce tseslint and fix lint script
We were running ESLint against `*.js` (the default) which no longer
exists, so `--ext` has been added to make it check `*.ts` files.

Alongside that, TSESLint has been added and the recommended config
enabled.

For now, these two rules are disabled:

- `no-explicit-any` - until we strongly type everything
- `no-unused-vars` - probably permanently, using typescript's own
  `noUnusedLocals` instead

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,15 @@
 {
-  "extends": "eslint:recommended",
-  "parserOptions": {
-    "ecmaVersion": 9,
-    "sourceType": "script"
-  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "env": {
     "node": true,
     "es6": true
   },
   "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off",
     "array-callback-return": "error",
     "no-empty": [
       "error",
