--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "rimraf": "^5.0.5",
     "sinon": "12.0.1",
     "sinon-chai": "3.7.0",
-    "typescript": "~4.5.3",
+    "typescript": "^5.4.2",
     "upath": "2.0.1"
   },
   "files": [
